--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-github-calendar": "^4.5.7",
     "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
